[gd_scene load_steps=5 format=3 uid="uid://d2g7uo6r8lpgi"]

[ext_resource type="Script" path="res://scripts/enemies/BossSpider.gd" id="1_bossspider"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(52, 52)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_1"]
size = Vector2(48, 48)

[node name="BossSpider" type="CharacterBody2D"]
script = ExtResource("1_bossspider")

[node name="BossRect" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
color = Color(0.8, 0, 0.8, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_2")

[node name="AttackTimer" type="Timer" parent="."]

[node name="HealthLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -50.0
offset_right = 20.0
offset_bottom = -30.0
text = "100"
horizontal_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"] 